# floq

./: README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/functions/: filter.rs  map.rs  mod.rs  reduce.rs  window.rs
crates/core/src/pipeline/: channel.rs  component_context.rs  message.rs  mod.rs  pipeline_component.rs  pipeline_monitor.rs  pipeline_task.rs
crates/core/src/slots/: merger.rs  mod.rs  round_robin_splitter.rs
crates/core/src/sources/: file_source.rs  mod.rs  websocket.rs  websocket_mqtt.rs
crates/core/src/sources/bluesky/: bluesky_firehose_source.rs  firehose_message.rs  mod.rs
crates/core/src/sources/mastodon/: mastodon_firehose_source.rs  mod.rs
crates/core/src/test_utils/: delayed_string_source.rs  mod.rs  number_collector.rs  number_doubler.rs  number_source.rs  string_collector.rs  string_source.rs
crates/core/src/transformers/: gemini_embeddings.rs  huggingface_embeddings.rs  mod.rs  printer_sink.rs
crates/core/tests/: pipeline_tests.rs
crates/pyfloq/: Cargo.toml  README.md
crates/pyfloq/examples/: map_example.py  pipeline_chain.py  simple_pipeline.py
crates/pyfloq/src/: lib.rs  py_bluesky_firehose.rs  py_collector.rs  py_filter.rs  py_map.rs  py_pipeline_component.rs  py_pipeline_wrapper.rs  py_printer_sink.rs  py_reduce.rs  py_window.rs
examples/count_words/: Cargo.toml
examples/count_words/src/: main.rs
examples/embeddings/: Cargo.toml
examples/embeddings/src/: main.rs
