[package]
name = "floq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
futures = "0.3"
futures-util = "0.3"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ciborium = "0.2"
rs-car = "0.4"
bytes = "1.5"
serde_cbor = "0.11"
crossbeam = "0.8"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
regex = "1.10" 
rumqttc = { version = "0.24", features = ["websocket", "url"] }
chrono = "0.4"
