[package]
name = "pyfloq"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyfloq"
crate-type = ["cdylib"]

[dependencies]
floq = { path = "../core" }
parking_lot = "0.12.3"
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1" 
